--- a/options.html
+++ b/options.html
@@ -3,18 +3,99 @@
 
 <head>
     <title>Powerschool GPA Calculator Options</title>
+    
+    <style>
+        body {
+        width: 400px;
+        height: 250px;
+        background-color: #e6e6e6;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        color: #666666;
+        line-height: 1.5;
+      }
+
+      h3 {
+        text-align: center;
+        font-size: 24px;
+        margin-top: 20px;
+        color: #666666;
+      }
+
+      hr {
+        height: 1px;
+        border: none;
+        background-color: #3a3a3a;
+        margin-top: 20px;
+        margin-bottom: 20px;
+      }
+
+      button {
+        display: block;
+        width: 120px;
+        height: 36px;
+        line-height: 36px;
+        text-align: center;
+        margin: 0 auto;
+        border-radius: 3px;
+        border: none;
+        font-size: 16px;
+        font-weight: 600;
+        letter-spacing: 1px;
+        cursor: pointer;
+        background-color: rgb(103, 102, 108);
+        transition: transform 0.2s, box-shadow 0.2s;
+      }
+
+      button:hover {
+        transform: translateY(2px);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+      }
+
+      button:active {
+        transform: translateY(0px);
+        box-shadow: none;
+      }
+      p {
+        text-align: center;
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
+      input {
+        display: block;
+        margin: 0 auto;
+        line-height: 36px;
+        text-align: center;
+        border-radius: 3px;
+        border: none;
+        width: 300px;
+        font-size: 12px;
+        font-weight: 100;
+        letter-spacing: 1px;
+        background-color: rgb(183, 183, 183);
+        transition: transform 0.2s, box-shadow 0.2s;
+      }
+      img {
+        display: block;
+        margin: 0 auto;
+        width: 100px;
+        height: 100px;
+      }
+    </style>
 </head>
 
 <body>
-    URL of Powerschool grades (example: https://powerschool.westportps.org):
-    <br>
+    <h3>Powerschool GPA Calculator</h3>
+    <img src="/image.png" alt="Powerschool GPA Calculator Logo">
+   <p>URL of Powerschool Gradebook: <br>(ex: https://powerschool.westportps.org)</p>
+    <!-- <br> -->
     <input type="text" id="url_in">
-
-    <div id="status"></div>
+<br>
     <button id="save">Save</button>
-    
     <br>
-    Created by Graham Zemel
+    <p>Created by <a href="https://grahamzemel.com/contact">Graham Zemel</a></p>
+    <br>
+    <p style="font-size: xx-small;">All calculations are estimates and should be used as such. Do not use any estimate for official purposes. If you do, the developer(s) are not liable for any repercussions or damages.</p>
     <script src="options.js"></script>
 </body>
 
